--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -6154,6 +6154,11 @@
   badtrans: true
   direct: Lord of the Kitchen
   literal: Zao Wang Ye
+- raw: 璟王
+  result: King Jing
+  badtrans: true
+  direct: bright king
+  literal: jing wang
 - raw: 景王  
   result: King Jing  # Might actually be his name as in Jing Wang
   badtrans: true  
