--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,24 @@
-﻿- raw: （化境）
+﻿- raw: 他们还说，除非身死，否则绝不让我军踏进城门半步。
+  result: They also said that unless they die, they will never let our army set foot inside the city.
+  badtrans: true
+  direct: they also said, unless die, otherwise absolutely not let our army step into city gate half step
+  literal: ta men hai shuo, chu fei shen si, fou ze jue bu rang wo jun ta jin cheng men ban bu
+- raw: 正是知道了才闹着呢，说……说王爷和将军是乱臣贼子。
+  result: That's exactly why they're causing a stir, they're saying... saying the prince and the general are traitors.
+  badtrans: true
+  direct: exactly knew then making a fuss, saying... saying prince and general are chaotic ministers and thieves
+  literal: zheng shi zhi dao le cai nao zhe ne, shuo... shuo wang ye he jiang jun shi luan chen zei zi
+- raw: 后来得了将军消息，打算进城才发现进不去。
+  result: Later, after receiving word from the general, we tried to enter the city but realized we couldn't.
+  badtrans: true
+  direct: later got general news, planned enter city only discovered can't enter
+  literal: hou lai de le jiang jun xiao xi, da suan jin cheng cai fa xian jin bu qu
+- raw: 怎么乱糟糟的？
+  result: Why is there such a mess?
+  badtrans: true
+  direct: how messy messy
+  literal: zen me luan zao zao de
+- raw: （化境）
   result: (Trancendant)
   badtrans: true
   direct: transformation realm
