--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -25,6 +25,11 @@
   direct: mortal tier
   literal: fan jie
 
+- raw: 气势
+  result: Momentum
+  badtrans: false
+  direct: Qi force
+  literal: Qishi
 - raw: 化境
   result: Transcendant
   allowalt: 
