--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,29 @@
-﻿- raw: 他们还说，除非身死，否则绝不让我军踏进城门半步。
+﻿- raw: 那你把段前辈的遗体埋葬在何处？说起来他也算是我的授业恩师。
+  result: So where did you bury Senior Duan's body? Come to think of it, he was also my mentor.
+  badtrans: true
+  direct: Then you put Duan senior's corpse buried where? Speaking of it, he also counts as my teaching benefactor.
+  literal: Nà nǐ bǎ Duàn qiánbèi de yítǐ máizàng zài hé chù? Shuō qǐlái tā yě suàn shì wǒ de shòuyè ēnshī.
+- raw: 可村中百姓……怎么办？
+  result: But what about the villagers... what should we do?
+  badtrans: true
+  direct: But village middle common people... how to do?
+  literal: Ke cun zhong bǎi xìng... zěn me bàn?
+- raw: 段氏旧藏，藏有昔年传承，包括……六脉全篇
+  result: The Duan family's old collection, containing the ancient inheritance, including... the complete text of the Six Meridians
+  badtrans: true
+  direct: Duan family old collection, contain past years' inheritance, including... Six Meridians full text
+  literal: Duan shi jiu cang, cang you xi nian chuán chéng, bāokuò... liù mài quán piān
+- raw: 孔子如何看待“己所不欲”？
+  result: "How did Confucius view 'What you do not want for yourself'?"
+  badtrans: true
+  direct: Confucius how look at 'what oneself not want'?
+  literal: Kongzi ruhe kanding ji suo bu yu?
+- raw: 捭阖
+  result: Baihe
+  badtrans: true
+  direct: Open and Close
+  literal: Bai he
+- raw: 他们还说，除非身死，否则绝不让我军踏进城门半步。
   result: They also said that unless they die, they will never let our army set foot inside the city.
   badtrans: true
   direct: they also said, unless die, otherwise absolutely not let our army step into city gate half step
