--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,34 @@
-﻿- raw: 那你把段前辈的遗体埋葬在何处？说起来他也算是我的授业恩师。
+﻿- raw: 还有说将军因段将军之死记恨燕国，意图报复燕国权贵。
+  result: Some even say the general resents Yan for General Duan’s death and intends to take revenge on the Yan nobility.
+  badtrans: true
+  direct: also say general because of Duan general's death bears grudge against Yan, intends to retaliate against Yan aristocrats
+  literal: hai you shuo jiang jun yin duan jiang jun zhi si ji hen yan guo, yi tu bao fu yan guo quan gui
+- raw: 还有还有，王上不喜将军和起义军出身一般，打算卸磨杀驴。
+  result: And furthermore, the king dislikes that the general and the rebel army come from similar backgrounds, planning to discard the donkey after the mill is unloaded.
+  badtrans: true
+  direct: and also, king doesn't like general and rebel army come from same background, planning to unload mill and kill donkey
+  literal: hai you hai you, wang shang bu xi jiang jun he qi yi jun chu shen yi ban, da suan xie mo sha lv
+- raw: 还有………说将军自诩段将军亲信，瞧不起起义军，拉拢起义军只是想找人当垫背的。
+  result: And also... saying that the general prides himself as General Duan's trusted confidant, looks down on the rebel army, and is only trying to recruit them to find someone to take the blame.
+  badtrans: true
+  direct: and also... saying general prides himself Duan general trusted confidant, looks down on rebel army, recruit rebel army only want find someone to take the blame
+  literal: hai you………shuo jiang jun zi xu duan jiang jun qin xin, qiao bu qi qi yi jun, la long qi yi jun zhi shi xiang zhao ren dang dian bei de
+- raw: 孙才英！背后编排上峰，我看你是越来越放肆了！
+  result: Sun Caiying! Plotting against your superiors behind their back, it seems you're becoming more and more audacious!
+  badtrans: true
+  direct: Sun Caiying! Behind arranging upper level, I see you are becoming more and more insolent!
+  literal: sun cai ying! bei hou bian pai shang feng, wo kan ni shi yue lai yue fang si le!
+- raw: 你可要改国名？
+  result: Are you planning to change the country's name?
+  badtrans: true
+  direct: you planning to change country name?
+  literal: ni ke yao gai guo ming?
+- raw: ………也罢。此事待我回去先报给宗主再说吧。
+  result: ... Fine. I'll report this to the sect leader when I return and discuss it then.
+  badtrans: true
+  direct: ...... alright. This matter wait for me return first report to sect leader then speak
+  literal: ....... ye ba. ci shi dai wo hui qu xian bao gei zong zhu zai shuo ba
+- raw: 那你把段前辈的遗体埋葬在何处？说起来他也算是我的授业恩师。
   result: So where did you bury Senior Duan's body? Come to think of it, he was also my mentor.
   badtrans: true
   direct: Then you put Duan senior's corpse buried where? Speaking of it, he also counts as my teaching benefactor.
