--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -3138,6 +3138,16 @@
   literal: "{P} jiang jun"
 
 # Names
+- raw: 李公子
+  result: Young Lord Li
+  badtrans: true
+  direct: Li young master
+  literal: li gong zi
+- raw: 王大哥
+  result: Senior Brother Wang
+  badtrans: true
+  direct: Wang big brother
+  literal: wang da ge
 - raw: 徐兄
   result: Brother Xu
   badtrans: true
