--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,5 +1,51 @@
-﻿- raw: 还有说将军因段将军之死记恨燕国，意图报复燕国权贵。
-  result: Some even say the general resents Yan for General Duan’s death and intends to take revenge on the Yan nobility.
+﻿- raw: ）拒绝了。
+  result: ) was rejected
+  badtrans: true
+  direct: ) rejected
+  literal: ) ju jue le
+- raw: ">的请求被（"
+  result: ">'s request was ("
+  badtrans: true
+- raw: ）已送达。
+  result: ) has been delivered
+  badtrans: true
+  direct: ) has been delivered
+  literal: ) yi song da
+- raw: ）了！
+  result: ) is done!
+  badtrans: true
+  direct: ) finished!
+  literal: ) le!
+- raw: "选择对应人物可解除跟随。<color=00FF00>（注：选择解除跟随后人物无法重新跟随主角，请确保解除跟随时已完成跟随人物相关的主线或支线）</color>"
+  result: "Selecting the corresponding character will cancel following. <color=00FF00>(Note: Once a follower is removed, they cannot follow the protagonist again. Please ensure any related main or side quests are completed before canceling.)</color>"
+  badtrans: true
+- raw: 你思索了下，决定以残烛的名号进行残烛派来的任务）
+  result: After thinking it over, you decide to carry out the mission sent by Can Zhu under the name of Can Zhu.)
+  badtrans: true
+  direct: you thought for a moment, decided to use Canzhu's name to carry out Canzhu-sent mission)
+  literal: ni si suo le xia, jue ding yi can zhu de ming hao jin xing can zhu pai lai de ren wu)
+- raw: ）来否则的话应该会得到一个好成绩。
+  result: ) otherwise, it should lead to a good result.
+  badtrans: true
+  direct: ) otherwise, should get a good result
+  literal: ) lai fou ze de hua ying gai hui de dao yi ge hao cheng ji
+- raw: ）的话应该会非常顺利才是。
+  result: ) if so, it should go very smoothly.
+  badtrans: true
+  direct: ) if so should be very smooth indeed
+  literal: ) de hua ying gai hui fei chang shun li cai shi
+- raw: ）应该会很合适吧。
+  result: ) it should be quite suitable, right?
+  badtrans: true
+  direct: ) should be very suitable, right?
+  literal: ) ying gai hui hen he shi ba
+- raw: 关于这件事的的话……（
+  result: As for this matter... (
+  badtrans: true
+  direct: regarding this matter's words... (
+  literal: guan yu zhe jian shi de de hua... (
+- raw: 还有说将军因段将军之死记恨燕国，意图报复燕国权贵。
+  result: Some even say the general resents Yan for General Duan's death and intends to take revenge on the Yan nobility.
   badtrans: true
   direct: also say general because of Duan general's death bears grudge against Yan, intends to retaliate against Yan aristocrats
   literal: hai you shuo jiang jun yin duan jiang jun zhi si ji hen yan guo, yi tu bao fu yan guo quan gui
