--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1,4 +1,5 @@
-﻿# Terms
+﻿
+# Terms
 - raw: 玄阶
   result: Mystic Tier
   badtrans: true
@@ -24,7 +25,6 @@
   badtrans: true
   direct: mortal tier
   literal: fan jie
-
 - raw: 气势
   result: Momentum
   badtrans: false
