--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,39 @@
-﻿- raw: ）拒绝了。
+﻿- raw: 谢王上。
+  result: Thank you, Your Majesty
+  badtrans: true
+  direct: thank king
+  literal: xie wang shang
+- raw: 你可算来了，这是从楚国宗和那儿来的信。
+  result: You're finally here. This is a letter from Zong He of Chu Kingdom.
+  badtrans: true
+  direct: you finally came, this is from Chu State Zong He's place letter
+  literal: ni ke suan lai le, zhe shi cong chu guo zong he na er lai de xin
+- raw: 孙先生并未透露捭阖谷消息，但仅仅只是防范于未然，便杀他灭口吗？
+  result: Mister Sun didn't reveal anything about Baihe Valley, was it really necessary to kill him just for a precaution?
+  badtrans: true
+  direct: Mr. Sun did not reveal Baihe Valley news, but just to guard against possible trouble, then kill him to silence?
+  literal: sun xian sheng bing wei tou lu bai he gu xiao xi, dan jin jin zhi shi fang fan yu wei ran, bian sha ta mie kou ma?
+- raw: 捭！阖！谷！
+  result: Bai! He! Valley!
+  badtrans: true
+  direct: open! close! valley!
+  literal: bai! he! gu!
+- raw: 挑起争端。
+  result: Stir up conflict
+  badtrans: true
+  direct: provoke dispute
+  literal: tiao qi zheng duan
+- raw: 陆兄说来听听。
+  result: Brother Lu, let's hear what you have to say.
+  badtrans: true
+  direct: Brother Lu speak let (me) listen
+  literal: lu xiong shuo lai ting ting
+- raw: 多半是这样的。
+  result: Most likely, that's the case
+  badtrans: true
+  direct: most likely is like this
+  literal: duo ban shi zhe yang de
+- raw: ）拒绝了。
   result: ) was rejected
   badtrans: true
   direct: ) rejected
@@ -16,6 +51,16 @@
   badtrans: true
   direct: ) finished!
   literal: ) le!
+- raw: 报——————
+  result: Report‑‑‑‑‑‑
+  badtrans: true
+  direct: report——————
+  literal: bao——————
+- raw: 可恶！
+  result: Damn it!
+  badtrans: true
+  direct: detestable!
+  literal: ke wu!
 - raw: "选择对应人物可解除跟随。<color=00FF00>（注：选择解除跟随后人物无法重新跟随主角，请确保解除跟随时已完成跟随人物相关的主线或支线）</color>"
   result: "Selecting the corresponding character will cancel following. <color=00FF00>(Note: Once a follower is removed, they cannot follow the protagonist again. Please ensure any related main or side quests are completed before canceling.)</color>"
   badtrans: true
