Profound sword clean up

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -7404,3 +7404,13 @@
   badtrans: true
   direct: startled swan one moment
   literal: jing hong yi shun
+- raw: 剑玄
+  result: Profound Sword
+  badtrans: true
+  direct: sword profound
+  literal: jian xuan
+- raw: 道意
+  result: Tao Intent
+  badtrans: true
+  direct: Dao meaning
+  literal: dao yi
