Rough Iron Sword

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2065,6 +2065,11 @@
   literal: ji neng juan
 
 # Items and Minerals
+- raw: 粗铁剑
+  result: Rough Iron Sword
+  badtrans: true
+  direct: rough iron sword
+  literal: cu tie jian
 - raw: 云海珠
   result: Cloud Sea Pearl
   badtrans: true
