--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2065,6 +2065,11 @@
   literal: ji neng juan
 
 # Items and Minerals
+- raw: 无瞿
+  result: Clarity
+  badtrans: false
+  direct: no distraction
+  literal: wu qu
 - raw: 粗铁剑
   result: Rough Iron Sword
   badtrans: true
