--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,9 @@
-﻿- raw: 每次伤害附带自身道学*1.1，持续7秒
+﻿- raw: 任务五分支一，对话士兵
+  result: Mission 5 Branch 1 Talk to Soldier
+  badtrans: true
+  direct: Task Five Branch One, Talk Soldier
+  literal: renwu wu fenzhi yi, duihua shibing
+- raw: 每次伤害附带自身道学*1.1，持续7秒
   result: Each hit adds Taoism ×1.1, lasts 7 seconds
   badtrans: true
   direct: each time damage carries own Daoism *1.1, lasts 7 seconds
