Update to latest patch

--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,8 @@
-﻿- raw: 任务五分支一，对话士兵
+﻿- raw: <color=#d18b57>条件未满足</color>
+  result: <color=#d18b57>Condition not met</color>
+- raw: "<nobr>装备上可替换主角模型，对话立绘和泡泡表情"
+  result: Equip to replace protagonist model, dialogue portrait, and bubble expression
+- raw: 任务五分支一，对话士兵
   result: Mission 5 Branch 1 Talk to Soldier
   badtrans: true
   direct: Task Five Branch One, Talk Soldier
